# LLMy

./: .dockerignore  .gitignore  Dockerfile.sim  README.md  config.yaml  docker-compose.gr00t.yaml  docker-compose.orin.yaml  docker-compose.pi.yaml  docker-compose.sim.yml  leremix.yaml  pixi.toml  robot.yaml  run_sim.sh  simulation.yaml
.robocore/: superclient.xml
.robocore/base/: Dockerfile.base  base.hash
.robocore/workspaces/camera/: Dockerfile  superclient.xml
.robocore/workspaces/lidar/: Dockerfile  repos.yaml  superclient.xml
.robocore/workspaces/motion/: Dockerfile  repos.yaml  superclient.xml
.robocore/workspaces/rosboard/: Dockerfile  repos.yaml  superclient.xml
.robocore/workspaces/simulation/: Dockerfile  superclient.xml
.robocore/workspaces/slam/: Dockerfile  superclient.xml
.robocore/workspaces/xbox/: Dockerfile  superclient.xml
docs/: bom.md  getting-started.md  launchfiles.md  packages.md
firmware/hardware_interface/src/: base_subscriber.cpp  config.h  display.cpp  display.h  head_subscriber.cpp  head_subscriber.h  joint_publisher.cpp  main.cpp  microros.cpp  microros.h  motor_controller.cpp  motor_controller.h
firmware/servo_test/: platformio.ini
firmware/servo_test/src/: main.cpp
models/4-way finals transition 2 lights/3/: metadata.pbtxt  model.config  model.sdf
models/bosdyn_spot/6/: model.sdf
models/cave corner 03 type a/8/: metadata.pbtxt  model.config  model.sdf
models/cave straight 03 type b/6/: metadata.pbtxt  model.config  model.sdf
models/cave straight type a/10/: metadata.pbtxt  model.sdf
models/ctu_cras_norlab_absolem_sensor_config_1/18/: model.sdf
models/ctu_cras_norlab_husky_sensor_config_1/4/: model.sdf
models/ctu_cras_norlab_marmotte_sensor_config_1/5/: model.sdf
models/ctu_cras_norlab_marv_sensor_config_1/8/: model.sdf
models/ctu_cras_norlab_spot_sensor_config_1/6/: metadata.pbtxt  model.sdf
models/edgar mine virtual stix/13/: model.sdf
models/jenolan section 01/5/: metadata.pbtxt  model.config  model.sdf
models/marble_spot_sensor_config_1/7/: metadata.pbtxt  model.config  model.sdf
models/niosh staging area/11/: metadata.pbtxt  model.config  model.sdf
models/rail tunnel corner/5/: model.config  model.sdf
models/rail tunnel elevation/7/: model.config  model.sdf
models/rail tunnel straight overlap/5/: model.config  model.sdf
models/rail tunnel straight/5/: model.config  model.sdf
models/rough tunnel tile 4-way intersection/11/: model.config  model.sdf
models/rough tunnel tile 90-degree turn/9/: model.config  model.sdf
models/rough tunnel tile straight/8/: model.config  model.sdf
models/tunnel tile 1/5/: metadata.pbtxt  model.config  model.sdf
models/tunnel tile 2/16/: metadata.pbtxt  model.config  model.sdf
models/tunnel tile 3/10/: metadata.pbtxt  model.config  model.sdf
models/tunnel tile 4/12/: metadata.pbtxt  model.config  model.sdf
models/tunnel tile 5/14/: metadata.pbtxt  model.config  model.sdf
models/tunnel tile 6/16/: metadata.pbtxt  model.config  model.sdf
models/tunnel tile 7/16/: metadata.pbtxt  model.config  model.sdf
models/universal straight 5/3/: metadata.pbtxt  model.config  model.sdf
models/urban cave transition straight/6/: metadata.pbtxt  model.config  model.sdf
parts/base/: adafruit_i2c_switch_mount.stl  adafruit_icm_mount.stl  adafruit_usb_pd_mount.stl  base_plate.stl  battery_left.stl  battery_right.stl  fe_urt_1_mount.stl  imu_mount.stl  orin_mount.stl  second_plate.stl  servo_mount.stl  third_plate.stl  wheel_hub.stl
parts/camera_tower/: pan_and_tilt_support.stl  pan_link.stl  realsense_support v1.stl  tower.stl
parts/misc/: lidar_mount.stl  wrist_camera_mod v1.stl
ros/: repos.vcs
ros/src/leremix_bringup/: CMakeLists.txt  README.md  package.xml
ros/src/leremix_camera/: README.md  (+1 more)
ros/src/leremix_control/: CMakeLists.txt  README.md  package.xml
ros/src/leremix_control/config/: controllers.hw.yaml  controllers.sim.yaml  ros2_control_bridge.yaml
ros/src/leremix_control/launch/: base_systems.launch.py  control_stack.launch.py  motion.launch.py  robot_bringup.launch.py
ros/src/leremix_control/urdf/: LeRemix.hardware.xacro  leremix.hardware.xacro
ros/src/leremix_servo_manager/: CMakeLists.txt  Makefile  README.md  motor_brake_test.py  package.xml  setup.py  spin_brake_test
ros/src/leremix_servo_manager/config/: servo_manager.yaml
ros/src/leremix_servo_manager/include/: MotorManager.h
ros/src/leremix_servo_manager/launch/: ping_test.launch.py  servo_manager.launch.py
ros/src/leremix_servo_manager/leremix_servo_manager/: __init__.py  brake_system.py  command_handlers.py  config.py  motor_manager.py  servo_manager_node.py  telemetry.py
ros/src/leremix_servo_manager/scripts/: calibrate_arm.py
ros/src/leremix_servo_manager/src/: MotorManager.cpp  ping_test.cpp  servo_manager_node.cpp  spin_brake_test.cpp
ros/src/leremix_servo_manager_py/: README.md  package.xml  setup.cfg  setup.py
ros/src/leremix_servo_manager_py/config/: servo_manager.yaml
ros/src/leremix_servo_manager_py/launch/: servo_manager.launch.py  test_brake_methods.launch.py
ros/src/leremix_servo_manager_py/leremix_servo_manager_py/: command_handlers.py  config.py  motor_manager.py  servo_manager_node.py
ros/src/leremix_slam/: CMakeLists.txt  README.md  package.xml
ros/src/leremix_slam/config/: lifelong_mapping.yaml  mapper_params_localization.yaml  online_mapping.yaml
ros/src/leremix_slam/launch/: lifelong_launch.py  localization_launch.py  online_async_launch.py  online_mapping_launch.py
ros/src/leremix_slam/scripts/: slam_control.sh
ros/src/llmy_control/: CMakeLists.txt  package.xml
ros/src/llmy_control/config/: controllers.hw.yaml  controllers.sim.yaml  ros2_control_bridge.yaml
ros/src/llmy_control/launch/: base_systems.launch.py  control_stack.launch.py  motion.launch.py
ros/src/llmy_control/urdf/: LLMy.hardware.xacro
ros/src/llmy_rviz/: CMakeLists.txt  README.md  package.xml
ros/src/llmy_rviz/launch/: rviz.launch.py
ros/src/llmy_rviz/rviz/: llmy.rviz
scripts/: README.md  calibrate_arm.py  check_motor_states.py  set_servo_id.py
(+228 files in other folders)
