<package format="3">
  <name>leremix_control</name>
  <version>0.0.1</version>
  <description>Controllers and parameters for LeRemix</description>
  <maintainer email="you@example.com">you</maintainer>
  <license>MIT</license>
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ros2_control packages -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>ros2_controllers</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>omnidirectional_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>ros2controlcli</exec_depend>

  <!-- LeRemix packages -->
  <exec_depend>leremix_control_plugin</exec_depend>
  <exec_depend>leremix_description</exec_depend>
  <exec_depend>leremix_servo_manager</exec_depend>

  <!-- Message packages -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export><build_type>ament_cmake</build_type></export>
</package>
