<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>llmy_rviz</name>
  <version>0.0.1</version>
  <description>RViz configuration and visualization for LLMy robot</description>
  <maintainer email="dev@llmy.com">LLMy Team</maintainer>
  <license>TODO</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>rviz2</exec_depend>
  <exec_depend>rviz_common</exec_depend>
  <exec_depend>rviz_default_plugins</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>llmy_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
